Update project to Java 16